-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
-
d82458507 (dev), 7529f4657 (6.8)
When setting the popup type to popup window, the material style properties is not completely working (tested using the material style):
- Menu does receive the propagation from its parent's background and primary/accent color.
- textSelection color is not propagated.
When adding the popup window popup type to the test data and running tst_material.cpp, the following errors occur test_output.txt
Note: The issue also occurs in other styles that propagate attached properties.
import QtQuick.Window import QtQuick.Controls import QtQuick.Layouts import QtQuick.Controls.Material ApplicationWindow { id: window width: 200 height: 200 visible: true Material.foreground: togglePal ? Material.Purple : Material.Blue property bool togglePal: true Button { text: "Open" onClicked: popup.open() } Popup { id: popup width: parent.width height: parent.height popupType: Popup.Window Button { id: button text: "Toggle palette" onClicked: { window.togglePal = !window.togglePal } } Label { anchors.top: button.bottom; text: qsTr("Label control") } } }
- relates to
-
QTBUG-139603 Menu does not propagate Material style to submenus with popupType: Popup.Window
-
- In Review
-
For Gerrit Dashboard: QTBUG-126713 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
587406,11 | Propagate attached style properties to the Popup with popupType window | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
588108,1 | tst_universal: Force all popups to use popupType: Popup.Item | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
589226,2 | Propagate attached style properties to the Popup with popupType window | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |